--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,29 +1,13 @@
-# wrangler.toml — تلگرام‌بات Cloudflare Workers
-
 name = "telbottest"
 main = "worker.js"
 compatibility_date = "2024-10-01"
-workers_dev = true
 
-# اکانت کلودفلر
-account_id = "e4ebd6d4925fe9c43dca494a9a0fe835"
+[vars]
+WH_SECRET = "dhcj0675121971"
+TG_SECRET_TOKEN = "Dhcj_4420471219719510"
+BOT_TOKEN = "8385455358:AAHLGmyNa3aeOZSXY-hOec07BfT1Br_S-y8"
+ADMINS = "6803856798" # آیدی عددی ادمین‌ها با کاما جدا
 
-# اتصال KV به متغیر "KV" (هم‌نام با کد)
 [[kv_namespaces]]
 binding = "KV"
 id = "261ee020d94442a9be799a7bba9a3d9b"
-
-# متغیرهای غیرسکرت که می‌خوای با دیپلوی از بین نرن
-[vars]
-WH_SECRET = "dhcj0675121971"
-ADMIN_EXPORT_SECRET = "Don_4420471219719510"
-
-# (اختیاری) اگر از محیط Preview هم استفاده می‌کنی:
-[env.preview]
-[[env.preview.kv_namespaces]]
-binding = "KV"
-id = "261ee020d94442a9be799a7bba9a3d9b"
-
-[env.preview.vars]
-WH_SECRET = "dhcj0675121971"
-ADMIN_EXPORT_SECRET = "Don_4420471219719510"
