--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,3 @@
-name = "telbottest"
-main = "worker.js"
+name = "telbottest"         # اسم سرویست در Cloudflare (دلخواه خودت)
+main = "worker.js"          # مسیر فایل ورکر؛ اگر جاش فرق داره، اینو عوض کن (مثلاً "src/worker.js")
 compatibility_date = "2024-10-01"
-
-[[kv_namespaces]]
-binding = "KV"
-id = "261ee020d94442a9be799a7bba9a3d9b"   # همانی که در Dashboard می‌بینی
-
-[vars]
-WH_SECRET = "dhcj0675121971"
-TG_SECRET_TOKEN = "Dhcj_4420471219719510"
-ADMIN_EXPORT_SECRET = "Don_4420471219719510"
-# BOT_TOKEN را در Dashboard به عنوان Secret بگذار (نه داخل فایل)
