--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
-name = "telbottest"         # اسم سرویست در Cloudflare (دلخواه خودت)
-main = "worker.js"          # مسیر فایل ورکر؛ اگر جاش فرق داره، اینو عوض کن (مثلاً "src/worker.js")
+name = "telbottest"
+main = "worker.js"
 compatibility_date = "2024-10-01"
 
 [vars]
